--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -69,6 +69,81 @@
 }
 /* End header */
 
+/* Start of testimonials */
+
+.testimonials{
+    text-align: center;
+    padding: 40px 0px;
+}
+
+.testimonials h2{
+    margin-bottom: 20px;
+}
+
+.testimonial{
+    width: calc( (100% - 40px) / 2);
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: flex-start;
+    box-shadow: 0px 14.5px 8.23719596862793px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    position: relative;
+    flex-wrap: wrap;
+}
+
+.testimonial:after{
+    content: '';
+    border-top: 40px solid #a3a3a3;
+    border-bottom: 40px solid transparent;
+    border-left: 40px solid transparent;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.testimonial .row{
+    gap: 40px;
+}
+.testimonial .user-info{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    align-items: center;
+}
+.testimonial .user-info img{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+
+.testimonial .user-info .user-data{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 10px;
+    align-items: flex-start;
+}
+
+.testimonial .user-info .user-data span{
+    font-size: 12px;
+    color: #969696;
+}
+
+.testimonial .rating{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 7px;
+}
+
+.testimonial q{
+    color: #646464;
+}
+
+.testimonial blockquote p{
+    display: inline-block;
+}
+/* end of testimonials */
 /* Start of footer */
 
 .footer{
