--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -62,9 +62,24 @@
     
 }
 
+.bars-menu{
+    display: none;
+}
 @media (max-width:920px){
     .nav{
         display: none;
+    }
+    .bars-menu{
+        display: inline-block;
+    }
+    .auth{
+        display: none;
+    }
+}
+
+@media (max-width:400px){
+    .container{
+        width: calc(100% - 40px);
     }
 }
 /* End header */
@@ -79,17 +94,21 @@
 .testimonials h2{
     margin-bottom: 20px;
 }
-
+.testimonial .row{
+    gap: 40px;
+}
 .testimonial{
-    width: calc( (100% - 40px) / 2);
+    
     display: flex;
     flex-direction: column;
     gap: 20px;
+    flex-basis: 400px;
     align-items: flex-start;
     box-shadow: 0px 14.5px 8.23719596862793px rgba(0, 0, 0, 0.2);
     padding: 20px;
     position: relative;
     flex-wrap: wrap;
+    flex-grow: 1;
 }
 
 .testimonial:after{
@@ -102,9 +121,7 @@
     right: 0;
 }
 
-.testimonial .row{
-    gap: 40px;
-}
+
 .testimonial .user-info{
     display: flex;
     flex-wrap: wrap;
@@ -143,6 +160,9 @@
 .testimonial blockquote p{
     display: inline-block;
 }
+
+
+
 /* end of testimonials */
 /* Start of footer */
 
