--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,7 @@
     position: sticky;
     top: 0;
     background-color: #fff;
+    z-index: 1;
 }
 
 .logo-section{
@@ -89,11 +90,17 @@
 .testimonials{
     text-align: center;
     padding: 40px 0px;
+    
 }
 
 .testimonials h2{
     margin-bottom: 20px;
 }
+
+.testimonials .row{
+    gap:40px
+}
+
 .testimonial .row{
     gap: 40px;
 }
@@ -103,6 +110,7 @@
     flex-direction: column;
     gap: 20px;
     flex-basis: 400px;
+    width: 600px;
     align-items: flex-start;
     box-shadow: 0px 14.5px 8.23719596862793px rgba(0, 0, 0, 0.2);
     padding: 20px;
@@ -180,15 +188,13 @@
     gap: 40px;
 }
 
-.footer .footer-end, .footer .footer-start{
-    width: calc( (100% - 40px)/ 2 );
-}
 
 .footer .footer-start{
     display: flex;
     flex-direction: column;
     gap: 30px;
     flex-wrap: wrap;
+    flex-basis: 400px;
 }
 
 .footer .footer-start .logo{
@@ -224,7 +230,9 @@
     height: 15px;
     box-sizing: content-box;
 }
-
+.footer .footer-end{
+    flex-grow: 1;
+}
 .footer .footer-end .row{
     align-items: flex-start;
 
@@ -242,4 +250,11 @@
     flex-direction: column;
     flex-wrap: wrap;
     gap: 10px;
+}
+
+@media (max-width:400px){
+    .footer .footer-start{
+        text-align: center;
+        align-items: center;
+    }
 }
